# wasmer-s3-fs

./: Cargo.toml  LICENSE
doc/: design.md  task.md
src/: filesystem.rs  impls.rs  lib.rs  store.rs  tree.rs
src/filesystem/: file.rs  impls.rs  store.rs  tree.rs
tests/: minio.rs  s3_fs_dirs.rs  s3_fs_files.rs
