[package]
name = "s3-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = "0.3.32"
s3 = { version = "0.1.34", features = ["blocking", "multipart"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = "1.52.3"
virtual-fs = { version = "0.701.0", default-features = false, features = ["futures"] }

[dev-dependencies]
aws-credential-types = "1.2.14"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["minio"] }
tokio = { version = "1.52.3", features = ["full", "test-util"] }
